--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculadora de Tabela</title>
+    <title>Quanto Vai Cair? 💸</title>
     <meta name="description" content="Calculadora de valores por hora - Calcule seus ganhos facilmente" />
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
